Create worker that responds to multiple commands

--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html>
 <body>
 <h1>Experiment with Service Workers</h1>
+
+<button onclick="sayHI()">Say HI</button>
+<button onclick="unknownCmd()">Send unknown command</button>
+<button onclick="stop()">Stop worker</button>
+<output id="result"></output>
+
 </body>
 <script type="text/javascript" src='main.js'></script>
 </html>
